--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 .setup-env
 
-.env.argocd
+.env.*
+.vscode
 
 # avoid commiting rendered manifests
 infra-setup/manifests/rendered/*
 
 crossplane-gke-sa-key.json
 
+claude_desktop_config.json
+claude_desktop_config_mcp.json
