--- a/tasks/mcp.yaml
+++ b/tasks/mcp.yaml
@@ -79,58 +79,10 @@ tasks:
         echo ""
         echo "Note: Ensure ARGOCD_STD_HOSTNAME and ARGOCD_MCP_HOSTNAME are set in your environment."
 
-  argocd-config:
-    desc: "Get ArgoCD MCP server configuration"
-    vars:
-      ARGOCD_SERVER:
-        sh: task argocd:get-server-auto
-      ARGOCD_TOKEN:
-        sh: task argocd:get-token
-    cmds:
-      - |
-        echo "ArgoCD MCP Server Configuration:"
-        echo "================================"
-        echo "Server URL: {{.ARGOCD_SERVER}}"
-        echo "API Token: {{.ARGOCD_TOKEN}}"
-        echo ""
-        echo "Environment variables for MCP server:"
-        echo "ARGOCD_SERVER={{.ARGOCD_SERVER}}"
-        echo "ARGOCD_TOKEN={{.ARGOCD_TOKEN}}"
-
-  argocd-config-local:
-    desc: "Get ArgoCD config for local port-forwarded access"
-    vars:
-      ARGOCD_PASSWORD:
-        sh: task argocd:get-secret
-    cmds:
-      - |
-        echo "Starting port-forward in background..."
-        kubectl -n argocd port-forward svc/argocd-server 8080:443 &
-        PF_PID=$!
-        sleep 3
-
-        echo "Getting token..."
-        TOKEN=$(curl -k -s "https://localhost:8080/api/v1/session" \
-          -d '{"username":"admin","password":"{{.ARGOCD_PASSWORD}}"}' \
-          -H "Content-Type: application/json" | \
-          jq -r '.token')
-
-        echo "ArgoCD MCP Server Configuration (Local):"
-        echo "========================================"
-        echo "Server URL: https://localhost:8080"
-        echo "API Token: $TOKEN"
-        echo ""
-        echo "Environment variables for MCP server:"
-        echo "ARGOCD_SERVER=https://localhost:8080"
-        echo "ARGOCD_TOKEN=$TOKEN"
-
-        kill $PF_PID 2>/dev/null || true
-
   argocd-env-file:
     desc: "Create .env file for ArgoCD MCP server"
     vars:
-      ARGOCD_SERVER:
-        sh: task argocd:get-server-internal
+      ARGOCD_SERVER_URL: "https://$ARGOCD_STD_HOSTNAME"
       ARGOCD_TOKEN:
         sh: task argocd:get-token
     cmds:
@@ -142,77 +94,14 @@ tasks:
         EOF
         echo "Created .env.argocd file with ArgoCD configuration"
 
-  argocd-config-standard:
-    desc: "Get ArgoCD MCP config using standard Gateway URL"
-    vars:
-      ARGOCD_SERVER_URL: "https://$ARGOCD_STD_HOSTNAME"
-      ARGOCD_PASSWORD:
-        sh: task argocd:get-secret-simple
-    cmds:
-      - |
-        echo "Getting ArgoCD token from Standard Gateway..."
-        TOKEN=$(curl -k -s "{{.ARGOCD_SERVER}}/api/v1/session" \
-          -d '{"username":"admin","password":"{{.ARGOCD_PASSWORD}}"}' \
-          -H "Content-Type: application/json" | jq -r '.token' 2>/dev/null || echo "Failed to get token")
-
-        echo "ArgoCD MCP Server Configuration (Standard Gateway - https://$ARGOCD_STD_HOSTNAME):"
-        echo "======================================================================"
-        echo "Server URL: {{.ARGOCD_SERVER_URL}}"
-        echo "API Token: $TOKEN"
-        echo ""
-        echo "Environment variables for MCP client:"
-        echo "ARGOCD_BASE_URL={{.ARGOCD_SERVER_URL}}"
-        echo "ARGOCD_API_TOKEN=$TOKEN"
-
-  argocd-config-mcp:
-    desc: "Get ArgoCD MCP config using kgateway MCP URL"
-    vars:
-      ARGOCD_SERVER_URL: "https://$ARGOCD_MCP_HOSTNAME"
-      ARGOCD_PASSWORD:
-        sh: task argocd:get-secret-simple
-    cmds:
-      - |
-        echo "Getting ArgoCD token from kgateway MCP..."
-        TOKEN=$(curl -k -s "{{.ARGOCD_SERVER_URL}}/api/v1/session" \
-          -d '{"username":"admin","password":"{{.ARGOCD_PASSWORD}}"}' \
-          -H "Content-Type: application/json" | jq -r '.token' 2>/dev/null || echo "Failed to get token")
-
-        echo "ArgoCD MCP Server Configuration (kgateway MCP - https://$ARGOCD_MCP_HOSTNAME):"
-        echo "==================================================================="
-        echo "Server URL: {{.ARGOCD_SERVER_URL}}"
-        echo "API Token: $TOKEN"
-        echo ""
-        echo "Environment variables for MCP client:"
-        echo "ARGOCD_BASE_URL={{.ARGOCD_SERVER_URL}}"
-        echo "ARGOCD_API_TOKEN=$TOKEN"
-
   generate-configs-standard:
     desc: "Generate MCP client configs using standard Gateway"
     vars:
       ARGOCD_SERVER_URL: "https://$ARGOCD_STD_HOSTNAME"
-      ARGOCD_PASSWORD:
-        sh: task argocd:get-secret-simple
+    deps:
+      - mcp:argocd-env-file
     cmds:
       - |
-        echo "Generating MCP client configurations for Standard Gateway (https://$ARGOCD_STD_HOSTNAME)..."
-        TOKEN=$(curl -k -s "{{.ARGOCD_SERVER_URL}}/api/v1/session" \
-          -d '{"username":"admin","password":"{{.ARGOCD_PASSWORD}}"}' \
-          -H "Content-Type: application/json" | \
-          jq -r '.token' 2>/dev/null || echo "Failed to get token")
-
-        if [ "$TOKEN" = "null" ] || [ -z "$TOKEN" ]; then
-          echo "❌ Failed to get ArgoCD token from {{.ARGOCD_SERVER_URL}}"
-          echo "   Check if Gateway is accessible and ArgoCD is running."
-          exit 1
-        fi
-
-        # Create .env file
-        cat > .env.argocd << EOF
-        ARGOCD_SERVER={{.ARGOCD_SERVER}}
-        ARGOCD_TOKEN=$TOKEN
-        ARGOCD_INSECURE=false
-        EOF
-
         # Create VSCode config
         mkdir -p .vscode
         cat > .vscode/mcp.json << EOF
@@ -252,44 +141,26 @@ tasks:
         echo "   - .vscode/mcp.json"
         echo "   - claude_desktop_config.json"
 
-  generate-configs-mcp:
+  generate-configs-mcp-not-ready:
     desc: "Generate MCP client configs using kgateway MCP endpoint"
+    # however the MCP server urls will need to change to hosted URLs not stdio
     vars:
-      ARGOCD_SERVER_URL: "https://$ARGOCD_STD_HOSTNAME"
-      #ARGOCD_SERVER_URL: "https://$ARGOCD_MCP_HOSTNAME" TODO
-      ARGOCD_PASSWORD:
-        sh: task argocd:get-secret
+      ARGOCD_SERVER_URL: "https://$ARGOCD_MCP_HOSTNAME"
+    deps:
+      - mcp:argocd-env-file
     cmds:
       - |
-        echo "Generating MCP client configurations for kgateway MCP (https://$ARGOCD_MCP_HOSTNAME)..."
-        TOKEN=$(curl -k -s "{{.ARGOCD_SERVER_URL}}/api/v1/session" \
-          -d '{"username":"admin","password":"{{.ARGOCD_PASSWORD}}"}' \
-          -H "Content-Type: application/json" | jq -r '.token' 2>/dev/null)
-
-        if [ "$TOKEN" = "null" ] || [ -z "$TOKEN" ]; then
-          echo "❌ Failed to get ArgoCD token from {{.ARGOCD_SERVER_URL}}"
-          echo "   Check if kgateway MCP is accessible and ArgoCD is running."
-          exit 1
-        fi
-
-        # Create .env file
-        cat > .env.argocd-mcp << EOF
-        ARGOCD_SERVER={{.ARGOCD_SERVER}}
-        ARGOCD_TOKEN=$TOKEN
-        ARGOCD_INSECURE=false
-        EOF
-
         # Create VSCode config
         mkdir -p .vscode
         cat > .vscode/mcp-kgateway.json << EOF
         {
           "servers": {
-            "argocd-mcp-kgateway": {
+            "argocd-mcp": {
               "type": "stdio",
               "command": "npx",
               "args": ["argocd-mcp@latest", "stdio"],
               "env": {
-                "ARGOCD_BASE_URL": "{{.ARGOCD_SERVER_URL}}",
+                "ARGOCD_BASE_URL": "{{.ARGOCD_STD_HOSTNAME}}",
                 "ARGOCD_API_TOKEN": "$TOKEN"
               }
             }
@@ -301,11 +172,11 @@ tasks:
         cat > claude_desktop_config_mcp.json << EOF
         {
           "mcpServers": {
-            "argocd-mcp-kgateway": {
+            "argocd-mcp": {
               "command": "npx",
               "args": ["argocd-mcp@latest", "stdio"],
               "env": {
-                "ARGOCD_BASE_URL": "{{.ARGOCD_SERVER_URL}}",
+                "ARGOCD_BASE_URL": "{{.ARGOCD_STD_HOSTNAME}}",
                 "ARGOCD_API_TOKEN": "$TOKEN"
               }
             }
@@ -318,7 +189,7 @@ tasks:
         echo "   - .vscode/mcp-kgateway.json"
         echo "   - claude_desktop_config_mcp.json"
 
-  test-both-gateways:
+  test-gateways:
     desc: "Test both ArgoCD Gateway endpoints"
     vars:
       ARGOCD_PASSWORD:
@@ -360,78 +231,3 @@ tasks:
         else
           echo "   ❌ kgateway MCP authentication failed"
         fi
-
-  github-env-file:
-    desc: "Create template .env file for GitHub MCP server"
-    cmds:
-      - |
-        if [ -f .env.github ]; then
-          echo ".env.github already exists. Backing up to .env.github.bak"
-          cp .env.github .env.github.bak
-        fi
-        cat > .env.github << EOF
-        # GitHub Personal Access Token
-        # Create at: https://github.com/settings/personal-access-tokens
-        # Required scopes: repo, read:org, read:user
-        GITHUB_TOKEN=your_github_token_here
-
-        # Optional: Default repository (format: owner/repo)
-        # GITHUB_DEFAULT_REPO=your-org/your-repo
-
-        # Optional: GitHub API base URL (usually not needed)
-        # GITHUB_API_BASE_URL=https://api.github.com
-        EOF
-        echo "Created .env.github template file"
-        echo "Please edit .env.github and add your GitHub token"
-
-  generate-vscode-config:
-    desc: "Generate VSCode MCP configuration for ArgoCD"
-    vars:
-      ARGOCD_SERVER:
-        sh: task argocd:get-server-internal
-      ARGOCD_TOKEN:
-        sh: task argocd:get-token
-    cmds:
-      - mkdir -p .vscode
-      - |
-        cat > .vscode/mcp.json << EOF
-        {
-          "servers": {
-            "argocd-mcp": {
-              "type": "stdio",
-              "command": "npx",
-              "args": ["argocd-mcp@latest", "stdio"],
-              "env": {
-                "ARGOCD_BASE_URL": "{{.ARGOCD_SERVER}}",
-                "ARGOCD_API_TOKEN": "{{.ARGOCD_TOKEN}}"
-              }
-            }
-          }
-        }
-        EOF
-      - echo "Created .vscode/mcp.json for ArgoCD MCP"
-
-  generate-claude-config:
-    desc: "Generate Claude Desktop MCP configuration for ArgoCD"
-    vars:
-      ARGOCD_SERVER:
-        sh: task argocd:get-server-internal
-      ARGOCD_TOKEN:
-        sh: task argocd:get-token
-    cmds:
-      - |
-        cat > claude_desktop_config.json << EOF
-        {
-          "mcpServers": {
-            "argocd-mcp": {
-              "command": "npx",
-              "args": ["argocd-mcp@latest", "stdio"],
-              "env": {
-                "ARGOCD_BASE_URL": "{{.ARGOCD_SERVER}}",
-                "ARGOCD_API_TOKEN": "{{.ARGOCD_TOKEN}}"
-              }
-            }
-          }
-        }
-        EOF
-        echo "Created claude_desktop_config.json for ArgoCD MCP"
